--- a/notebooks/filter_instrument-Copy1.ipynb
+++ b/notebooks/filter_instrument-Copy1.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,20 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"Regeneration of lead synth from combined signal\"\"\"\n",
-    "import keras\n",
-    "from keras.layers import Dense, Dropout, PReLU\n",
-    "from keras.optimizers import Adam\n",
+    "from tensorflow.keras.layers import Dense, Dropout, PReLU\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "from music_generator.basic.random import generate_dataset\n",
     "from music_generator.basic.signalproc import SamplingInfo\n",
     "from music_generator.musical.timing import Tempo\n",
     "from music_generator.musical.scales import GenericScale\n",
-    "from music_generator.analysis.play import play_mono_as_stereo, play_array\n",
     "from music_generator.basic.signalproc import mix_at\n",
     "from music_generator.analysis import preprocessing\n",
     "\n",
@@ -57,59 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sr = 44100\n",
+    "sr = 22050\n",
     "sampling_info = SamplingInfo(sr)\n",
-    "n_samples = 4096\n",
-    "fragment_length = 4096"
+    "n_samples = 4096 * 10\n",
+    "fragment_length = 4096\n",
+    "sr = sampling_info.sample_rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input_2 (InputLayer)            (None, 4096)         0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_7 (Lambda)               (None, 4096)         0           input_2[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_8 (Lambda)               (None, 4096)         0           lambda_7[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_10 (Lambda)              (None, 4096)         0           lambda_8[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                 (None, 4096)         16781312    lambda_10[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "p_re_lu_2 (PReLU)               (None, 4096)         4096        dense_3[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                 (None, 4096)         16781312    p_re_lu_2[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "activation_2 (Activation)       (None, 4096)         0           dense_4[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_11 (Lambda)              (None, 4096)         0           lambda_8[0][0]                   \n",
-      "                                                                 activation_2[0][0]               \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_9 (Lambda)               (None, 4096)         0           lambda_7[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "lambda_12 (Lambda)              (None, 4096)         0           lambda_11[0][0]                  \n",
-      "                                                                 lambda_9[0][0]                   \n",
-      "==================================================================================================\n",
-      "Total params: 33,566,720\n",
-      "Trainable params: 33,566,720\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = regen_models.FftBranchesFilter(n_samples, learning_rate=1e-4, loss_fct='fft_loss').build_model()\n",
     "model.summary()"
@@ -121,16 +73,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while True:\n",
+    "# Generate in all keys\n",
+    "all_roots = scales.chromatic_scale('C')\n",
+    "roots = [n.get_symbol() for n in all_roots.generate(0, 1)]\n",
+    "print(roots)\n",
     "\n",
-    "    jds = jamdataset.JamDataSet(fragment_length=fragment_length, n_samples_train=10000, n_samples_test=500)\n",
-    "    model.fit(jds.x_train, \n",
-    "              jds.y_train, \n",
-    "              epochs=5, \n",
-    "              verbose=1,\n",
-    "              shuffle=True,\n",
-    "              batch_size=64,\n",
-    "              validation_data=[jds.x_test, jds.y_test])\n",
+    "def generate_dataset_for_root(root):\n",
+    "    return generate_dataset(n_measures=32,\n",
+    "                            tempo=Tempo(120),\n",
+    "                            scale=GenericScale(root, [0, 2, 3, 5, 7, 8, 10]),\n",
+    "                            sampling_info=sampling_info)\n",
+    "    \n",
+    "with Pool(8) as pool:\n",
+    "    datasets = pool.map(generate_dataset_for_root, roots)\n",
+    "    \n",
+    "# Make one big data set and make sure data is of same size    \n",
+    "audio_tracks, mix = preprocessing.combine_datasets(datasets)    \n",
+    "\n",
+    "input_track = mix\n",
+    "target_track = audio_tracks[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Audio(input_track, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Audio(target_track, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = preprocessing.create_training_data_set(n_samples, \n",
+    "                                              fragment_length, \n",
+    "                                              input_track, \n",
+    "                                              target_track)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Audio(x[0], rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Audio(y[0], rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(x, y, epochs=25, shuffle=True, batch_size=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_batches_inference = len(input_track) // fragment_length\n",
+    "inference_ds = input_track[:n_batches_inference * fragment_length]\n",
+    "inference_ds = inference_ds.reshape(-1, fragment_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = model.predict(inference_ds).reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(output, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while True:\n",
+    "\n",
+    "#     jds = jamdataset.JamDataSet(fragment_length=fragment_length, n_samples_train=10000, n_samples_test=500)\n",
+    "#     model.fit(jds.x_train, \n",
+    "#               jds.y_train, \n",
+    "#               epochs=5, \n",
+    "#               verbose=1,\n",
+    "#               shuffle=True,\n",
+    "#               batch_size=64,\n",
+    "#               validation_data=[jds.x_test, jds.y_test])\n",
     "    \n",
     "#     pred_model = regen_models.RegenModel(model=model, fragment_length=fragment_length)\n",
     "\n",
@@ -210,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
