--- a/presentation/4b-note-detection-monophonic.ipynb
+++ b/presentation/4b-note-detection-monophonic.ipynb
@@ -31,18 +31,18 @@
     "import tensorflow as tf\n",
     "from scipy.signal import stft\n",
     "\n",
-    "from music_generator.basic.random import generate_dataset\n",
-    "from music_generator.basic.signalproc import SamplingInfo\n",
+    "from music_generator.prefabs.random_walk_track import generate_dataset\n",
+    "from music_generator.signalproc.signalproc import SamplingInfo\n",
     "from music_generator.synthesizer.instrument import make_lead_instrument, make_accomp_instrument\n",
-    "from music_generator.musical.timing import Tempo, Duration\n",
-    "from music_generator.musical.scales import GenericScale\n",
-    "from music_generator.basic.signalproc import mix_at\n",
+    "from music_generator.music.timing import Tempo, Duration\n",
+    "from music_generator.music.scales import GenericScale\n",
+    "from music_generator.signalproc.signalproc import mix_at\n",
     "from music_generator.analysis import preprocessing\n",
-    "from music_generator.musical.chords import ChordInScaleDefinition\n",
-    "from music_generator.musical.notes import Note\n",
+    "from music_generator.music.chords import ChordInScaleDefinition\n",
+    "from music_generator.music.notes import Note\n",
     "\n",
-    "from music_generator.musical import scales\n",
-    "from music_generator.musical import timing\n",
+    "from music_generator.music import scales\n",
+    "from music_generator.music import timing\n",
     "\n",
     "import numpy as np\n",
     "from multiprocessing import Pool\n",
@@ -56,7 +56,7 @@
     "from scipy.io.wavfile import read\n",
     "import pandas as pd\n",
     "\n",
-    "from music_generator.basic import random\n",
+    "from music_generator.prefabs import random_walk_track as random\n",
     "from music_generator.synthesizer import instrument\n",
     "from music_generator.analysis import plots"
    ]
@@ -556,5 +556,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
